Fix bug on mobile view on testimonials height

--- a/css/custom.css
+++ b/css/custom.css
@@ -30,3 +30,9 @@
     height:680px;
     object-fit:cover;
 }
+
+@media screen and (max-width:767px) {
+    .parallax_section_1 {
+        min-height:90vh;
+    }
+}
